Fix mobile landing UI squish issue

--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -34,7 +34,6 @@ h1 {
     /*grid-gap: 10px;*/
     /*justify-content: center;*/
     /*align-items: center;*/
-    height: 3em;
 }
 
 #email-collector form input#user-email {
